--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
   "name": "gotown",
-  "email": "slabgorb@monaeo.com",
   "version": "1.0.0",
-  "description": "Gotown app",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Keith Avery",
+  "description": "town generator",
+  "main": "index.js",
+  "repository": "https://github.com/slabgorb/gotown",
+  "author": "Keith Avery <slabgorb@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.16.2",
+    "path": "^0.12.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "underscore": "^1.8.3",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
+  },
   "devDependencies": {
-    "bower-main": "^0.2.14",
-    "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^2.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-concat-css": "^2.3.0",
-    "gulp-go": "^1.1.0",
-    "gulp-google-webfonts": "0.0.14",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
-    "merge2": "^1.1.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
