--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.5.3",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "underscore": "^1.8.3",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
