--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "axios": "^0.16.2",
     "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
+    "material-ui": "^0.19.1",
+    "material-ui-icons": "^1.0.0-beta.5",
     "node-sass": "^4.5.3",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "typeface-roboto": "^0.0.35",
     "underscore": "^1.8.3",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
