--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.16.2",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
-    "material-ui": "^0.19.1",
+    "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.5",
     "node-sass": "^4.5.3",
     "path": "^0.12.7",
