--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "typeface-roboto": "^0.0.35",
