--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "typeface-roboto": "^0.0.35",
