--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
