--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.16.0"
+    "eslint": "^4.16.0",
+    "eslint-plugin-react": "^7.6.0"
   }
 }
