add typeface packages

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
-    "material-ui": "next",
+    "material-ui": "^1.0.0-beta.34",
     "material-ui-icons": "^1.0.0-beta.5",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
@@ -23,6 +24,8 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "typeface-montserrat": "^0.0.54",
+    "typeface-raleway": "^0.0.54",
     "typeface-roboto": "^0.0.35",
     "underscore": "^1.8.3",
     "webpack": "^3.5.5",
