--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
+    "inflection": "^1.12.0",
     "material-ui": "^1.0.0-beta.34",
     "material-ui-icons": "^1.0.0-beta.5",
     "node-sass": "^4.7.2",
