--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "author": "Keith Avery <slabgorb@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "inflection": "^1.12.0",
-    "material-ui": "^1.0.0-beta.34",
-    "material-ui-icons": "^1.0.0-beta.5",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
     "prop-types": "^15.6.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
