--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
+    "d3-axis": "^1.0.8",
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
     "file-loader": "^0.11.2",
     "inflection": "^1.12.0",
     "node-sass": "^4.7.2",
