redis part one (broken)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build: .
     ports: 
       - "8003:8003"
+    volumes:
+      - .:/go/src/github.com/slabgorb/gotown
   redis:
     image: "redis:alpine"
