--- a/web/package.json
+++ b/web/package.json
@@ -49,5 +49,8 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0"
+  },
+  "scripts": {
+    "start:dev": "webpack-dev-server",
   }
 }
