--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,4 +4,4 @@ COPY . /web
 RUN npm install -g -s --no-progress yarn webpack webpack-cli && \
     rm -rf /web/node_modules && \
     yarn install 
-CMD webpack --hot
+CMD webpack --hot; tail -f /dev/null
