--- a/web/package.json
+++ b/web/package.json
@@ -7,8 +7,9 @@
   "author": "Keith Avery <slabgorb@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "^3.0.1",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
@@ -29,7 +30,6 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "typeface-montserrat": "^0.0.54",
     "typeface-raleway": "^0.0.54",
     "typeface-roboto": "^0.0.35",
     "underscore": "^1.8.3",
