--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "d3-axis": "^1.0.8",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
+    "fetch-hoc": "^0.4.0",
     "file-loader": "^0.11.2",
     "inflection": "^1.12.0",
     "node-sass": "^4.7.2",
